# paxhtml

./: Cargo.toml  README.md
.github/workflows/: rust.yml
paxhtml/: Cargo.toml
paxhtml/examples/: test_component.rs
paxhtml/src/: attribute.rs  builder.rs  document.rs  element.rs  eval.rs  lib.rs  owned.rs  render_element.rs  routing.rs  util.rs
paxhtml/tests/: custom_components.rs  runtime_parsing.rs
paxhtml_macro/: Cargo.toml
paxhtml_macro/src/: lib.rs
paxhtml_mlua/: Cargo.toml
paxhtml_mlua/src/: lib.rs
paxhtml_parser/: Cargo.toml
paxhtml_parser/src/: ast.rs  lib.rs  parser.rs
paxhtml_tailwind/: Cargo.toml
paxhtml_tailwind/src/: lib.rs
