[workspace]
members = ["paxhtml", "paxhtml_macro", "paxhtml_parser", "paxhtml_tailwind"]
resolver = "2"

[workspace.dependencies]
bumpalo = { version = "3.16", features = ["collections"] }
html-escape = "0.2.13"
convert_case = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
